# aegis-v2-gateway

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.python  README.md  api_server.py  docker-compose.yml  package-lock.json  requirements-dev.txt  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: before_shell_gate.py  post_tool_audit.py  pre_tool_gate.py
app/: dashboard.py  main.py
app/api/: routes.py
app/core/: config.py
app/models/: infer.py
app/observability/: analytics.py  parquet_logger.py
app/resilience/: circuit_breaker.py
app/routing/: entropy.py  kv_router.py  prefix_cache.py  router.py  strategies.py  worker_registry.py
app/telemetry/: nvml_client.py  sampler.py  state.py
crates/ag-bench-harness/: Cargo.toml
crates/ag-bench-harness/src/: lib.rs
crates/ag-config/: Cargo.toml
crates/ag-config/src/: lib.rs
crates/ag-error/: Cargo.toml
crates/ag-error/src/: lib.rs
crates/ag-finops-model/: Cargo.toml
crates/ag-finops-model/src/: lib.rs
crates/ag-gateway/: Cargo.toml
crates/ag-gateway/src/: main.rs
crates/ag-http-common/: Cargo.toml
crates/ag-http-common/src/: lib.rs
crates/ag-observability/: Cargo.toml
crates/ag-observability/src/: lib.rs
crates/ag-pii-onnx/: Cargo.toml
crates/ag-pii-onnx/src/: lib.rs
crates/ag-pii-regex/: Cargo.toml
crates/ag-pii-regex/src/: lib.rs
crates/ag-redact/: Cargo.toml
crates/ag-redact/src/: lib.rs
crates/ag-resilience/: Cargo.toml
crates/ag-resilience/src/: lib.rs
crates/ag-search-tantivy/: Cargo.toml
crates/ag-search-tantivy/src/: lib.rs
crates/ag-types/: Cargo.toml
crates/ag-types/src/: lib.rs
crates/ag-zero-copy/: Cargo.toml
crates/ag-zero-copy/src/: lib.rs
crates/antigravity_core/: Cargo.toml  pyproject.toml
crates/antigravity_core/src/: lib.rs  pii.rs
deploy/k8s/: deployment.yaml  service.yaml
frontend/: CLAUDE.md  instrumentation.client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  spec.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: FinOpsDashboard.tsx  LeftNav.tsx  ProjectCard.tsx  ProjectDrawer.tsx  ProjectGrid.tsx  ScrollyCanvas.tsx
frontend/app/components/command/: ArbitrageOverview.tsx
frontend/app/components/dashboard/: AssetCard.tsx  AssetMatrix.tsx  DataLedger.tsx  MetricHero.tsx  SlaMonitor.tsx  TelemetryMap.tsx  TickerTape.tsx
frontend/app/components/shell/: GridPins.tsx  ScanlineOverlay.tsx  Sidebar.tsx  SidebarActions.tsx  TopAppBar.tsx
frontend/app/hooks/: useAssetPrices.ts  useLiveMetrics.ts  useSlaTimeseries.ts  useTickerEvents.ts  useTransactionStream.ts
frontend/app/types/: dashboard.ts  portfolio.ts
gateway/: main.py  requirements.txt
load_tests/: chaos_start.sh  locustfile.py  report.html  results_failures.csv  results_stats.csv  results_stats_history.csv  slow_gemini_server.py  verify_parquet.py
logs/finops/: requests_1774570678109366_0000000000.parquet  requests_1774570680762091_0000000000.parquet  requests_1774570680762091_0000000001.parquet  requests_1774570755799545_0000000000.parquet  requests_1774570758233033_0000000000.parquet  requests_1774570758233033_0000000001.parquet  requests_1775067717785685_0000000000.parquet  requests_1775067720168492_0000000000.parquet  requests_1775067720168492_0000000001.parquet  requests_1775077405091486_0000000000.parquet  requests_1775077407473113_0000000000.parquet  requests_1775077407473113_0000000001.parquet  requests_1775077831457319_0000000000.parquet  requests_1775077833875339_0000000000.parquet  requests_1775077833875339_0000000001.parquet  requests_1775084195336596_0000000000.parquet  requests_1775084197782260_0000000000.parquet  requests_1775084197782260_0000000001.parquet  requests_1775086299731290_0000000000.parquet  requests_1775086302134037_0000000000.parquet  requests_1775086302134037_0000000001.parquet  requests_1775087340356609_0000000000.parquet  requests_1775087342762667_0000000000.parquet  requests_1775087342762667_0000000001.parquet  requests_1775286117891184_0000000000.parquet  requests_1775286120244598_0000000000.parquet  requests_1775286120244598_0000000001.parquet  requests_1775287027848034_0000000000.parquet  requests_1775288914304235_0000000000.parquet  requests_1775288914304235_0000000001.parquet  requests_1775288914304235_0000000002.parquet  requests_1775288914304235_0000000003.parquet  requests_1775289869444656_0000000000.parquet  requests_1775289871800082_0000000000.parquet  requests_1775289871800082_0000000001.parquet
models/pii-ner/: README.md
output/: simulation_results.parquet
rust_core/: Cargo.toml  pyproject.toml
rust_core/benches/: embedding_bench.rs
rust_core/src/: cascade.rs  embedding.rs  lib.rs
scripts/: create_dummy_model.py  download_model.py  download_quality_model.py  e2e_latency_test.py  finops_analysis.py  generate_aegis_dashboard.py  generate_charts.py  generate_sequence_frames.py  generate_sovereign_pdf.py  optimize_assets.py  run_production_demo.py  sprint4_1_test.py
scripts/data/: production_prompts.json
tests/: conftest.py  test_nvml_client.py  test_routes.py  test_sampler.py  test_state.py
tests/test_observability/: test_analytics_engine.py  test_parquet_logger.py
tests/test_resilience/: test_circuit_breaker.py
tests/test_routing/: test_entropy.py  test_infer_endpoint.py  test_router_decide.py  test_sprint3_integration.py  test_strategies.py
