# ── Project Antigravity — 16-Crate Cargo Workspace ─────────────────────────────
#
# Sovereign Core: rlib crates compose the gateway; cdylib crates expose PyO3.
# ─────────────────────────────────────────────────────────────────────────────

[workspace]
members = [
    "crates/ag-types",
    "crates/ag-error",
    "crates/ag-config",
    "crates/ag-zero-copy",
    "crates/ag-pii-regex",
    "crates/ag-pii-onnx",
    "crates/ag-redact",
    "crates/ag-search-tantivy",
    "crates/ag-resilience",
    "crates/ag-http-common",
    "crates/ag-gateway",
    "crates/antigravity_core",
    "rust_core",
    "crates/ag-observability",
    "crates/ag-bench-harness",
    "crates/ag-finops-model",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
tracing     = "0.1"
regex       = "1"
once_cell   = "1.19"
axum        = { version = "0.8", features = ["json"] }
tower       = { version = "0.5", features = ["timeout", "util", "limit"] }
tower-http  = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ort         = { version = "=2.0.0-rc.12", features = ["ndarray"] }
ndarray     = { version = "0.17" }
tokenizers  = { version = "0.22", default-features = false, features = ["fancy-regex"] }
tantivy     = "0.26"
tower-resilience = "0.9.3"
tower-resilience-circuitbreaker = "0.9.3"
tower-resilience-core = "0.9.3"
pyo3        = { version = "0.22" }
criterion   = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
