[package]
name    = "ag-pii-onnx"
version = "0.1.0"
edition = "2021"
description = "ONNX NER inference for PII spans (optional paths via env)"

[dependencies]
ag-error  = { path = "../ag-error" }
ag-types  = { path = "../ag-types" }
ort       = { workspace = true }
ndarray   = { workspace = true }
tokenizers = { workspace = true }
tracing   = { workspace = true }
