[package]
name        = "antigravity_core"
version     = "0.1.0"
edition     = "2021"
description = "Project Antigravity — PyO3 bridge to ag-* workspace crates"

[lib]
name       = "antigravity_core"
crate-type = ["cdylib", "rlib"]

[features]
default          = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }

ag-types      = { path = "../ag-types" }
ag-zero-copy  = { path = "../ag-zero-copy" }
ag-pii-regex  = { path = "../ag-pii-regex" }
ag-pii-onnx   = { path = "../ag-pii-onnx" }
ag-redact     = { path = "../ag-redact" }
